# TextSummarizationModels

./: .gitignore  README.md  data.csv  results.csv  setup.cfg
summarization_model_selector/: cli.py  topsis.py
