[metadata]
name = kanishka-summarization-topsis
version = 0.1.2
author = Kanishka Rani
description = CLI tool to compare HuggingFace summarization models using TOPSIS
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    transformers
    torch
    pandas
    numpy
    rouge-score
python_requires = >=3.8

[options.entry_points]
console_scripts =
    model-compare-sum = summarization_model_selector.cli:main

